2005-02-15  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.schemas.in:
	Set the profile key default to a valid profile.

2005-02-08  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Depend on nautilus-burn >= 2.9.

2005-02-08  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.9.91.

	* configure.in:
	* src/Makefile.am:
	* tests/Makefile.am:
	Remove --enable-hal option

2005-02-07  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	* src/sj-prefs.c:
	Use a GtkFileChooserButton instead of the label+Browse button.

2005-02-07  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	HIGify the Preferences dialog.

2005-02-07  Ross Burton  <ross@burtonini.com>

	* src/sj-util.c:
	Protect against NULL devices.

2005-02-06  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Write the empty string instead of NULL to GConf. GConf 2.8 doesn't
	like NULL strings.

2005-02-06  Ross Burton  <ross@burtonini.com>

	* README:
	Update and add bug reporting blurb.

2005-02-06  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Fix statement order for non-C99 compilers (partially fixes 141587)

2005-02-06  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Ensure that the pipeline is not running when an error is caught
	(closes 130831)

2005-02-06  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Use gnome-open instead of nautilus when opening a folder (closes
	163720)

2005-02-05  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Fix the menus and switch to nautilus-burn.

	* configure.in:
	* src/Makefile.am:
	* src/sj-metadata-musicbrainz.c:
	* src/sj-prefs.c:
	* src/sj-util.c:
	* tests/Makefile.am:
	Use nautilus-burn instead of a copy of libbacon.
	
	* src/bacon-cd-selection.c:
	* src/bacon-cd-selection.h:
	* src/cd-drive.c:
	* src/cd-drive.h:
	* src/dvd_plus_rw_utils.cpp:
	* src/transport.hxx:
	* src/update-from-bacon.sh:
	Remove old bacon files.
