@@ -1,5 +1,12 @@
 2005-02-15  Ross Burton  <ross@burtonini.com>
 
+	* src/sound-juicer.h:
+	* src/sj-util.c:
+	* src/sj-extractor.c:
+	Use gi18n.h (thanks to Crispin Flowerday)
+
+2005-02-15  Ross Burton  <ross@burtonini.com>
+
 	* data/sound-juicer.schemas.in:
 	Set the profile key default to a valid profile.
 
